fix bugs with popup dropdown alignment

--- a/src/components/screen-popup/screen-popup.less
+++ b/src/components/screen-popup/screen-popup.less
@@ -380,7 +380,7 @@ input.live-search-box.au-target {
     max-height: 40vh;
     left: 0;
     padding: 20px;
-    background-color: rgba(0,0,0,0);
+    // background-color: rgba(0,0,0,0);
 
     & .searchDropDown-list{
       padding: 0;
